using UnityEngine;

public class CombatSystem : MonoBehaviour
{
    bool RegisterHit()
    {
        return true;
    }

    void ApplyDamage()
    {

    }
}
