using UnityEngine;

public class DamageSystem : MonoBehaviour
{
    int CalculateDamage()
    {
               return 10;
    }

    void ApplyResistance()
    {

    }
}
