using NUnit.Framework.Internal.Commands;
using UnityEngine;

public class BuffCurseManager : MonoBehaviour
{
    void ApplyBuff()
    {

    }

    void ApplyCurse()
    {
    }

    void ExpireEffect()
    {

    }
}
