using UnityEngine;

public class PlayerController : MonoBehaviour
{
    void Move(Vector3 direction, float speed)
    {
    }

    void Dash()
    {

    }

    void Attack()
    {

    }
}
